date Version 3.00.26 (Beta 3)
* Fixed FS#136 — "Panel size doen't change properly when 'size' is set to -1"
* Fixed FS#137 — "Allow -1 for the 'size' property if the minimum/maximum size is set."
* Fixed FS#113 — "Error when undoing cutting controls."
* Fixed FS#97 — "Menu items in XRC preview window involve wxFB functionality"

02-28-2007 Version 3.00.25 (Beta 3)
* Fixed FS#100 — "Problem with the relative path of XPM"
* Fixed FS#126 — "Splitter window control without a panel does not get redrawn correctly."
* Fixed FS#132 — "Splitter window control moves its sash unexpectedly at design time."
* Fixed spacer not displaying properly in most sizers.
  This was a regression in build 3.00.23.
* Fixed FS#133 — "Error when moving between designer/C++/XRC tabs."
  This was a regression in build 3.00.24.
^ Now connecting an event handler to idle events for splitter windows to reliably
  set the initial sash position.

02-27-2007 Version 3.00.24 (Beta 3)
* Fixed FS#131 — "Folder not getting released after saving a project into it."
* Fixed FS#114 — "Not being able to cut non-top-level sizers and paste them as top-level sizers."
* Fixed FS#124 — "Option to create a sizer around a control does not work on top-level sizers."
* Fixed FS#104 — "Editing XRC/C++ files should be disallowed completely or allowed to affect GUI properties."
* Fixed FS#127 — "Change 'new' label to 'new project'."
* Fixed FS#125 — "Buggy cut/paste of panels from splitter window controls."

02-26-2007 Version 3.00.23 (Beta 3)
+ Added wxGridBagSizer. This closes FS#58.
   Cannot use wxGBS as the first sizer in a form until the object model improves.
^ Spacer now uses sizeritem, instead of being standalone.
   This forced a project version uprev to 1.6
^ Converted all wxLogDebug to Debug::Print so __WXFB_DEBUG__ is used to
   determine whether or not to log.
^ Improved precompiled header support.
  NOTE: You must now define WX_PRECOMP when compiling to use a precompiled header.
